--- a/totalhr.web/Views/Shared/_Calendar.cshtml
+++ b/totalhr.web/Views/Shared/_Calendar.cshtml
@@ -10,7 +10,7 @@
     }
 }
 
-<link href="~/Content/calendar.css" rel="stylesheet" />
+<link href="~/Content/css/calendar.css" rel="stylesheet" />
 
 <p>
    
