More work for company document

--- a/totalhr.web/Views/Account/Index.cshtml
+++ b/totalhr.web/Views/Account/Index.cshtml
@@ -46,6 +46,13 @@
                 </div>
              }
 
+            <div class="option" onclick="document.location.href='/Document/'">
+                    <h4>@Account.tt_My_Documents</h4>
+                    <div class="cont">
+
+                    </div>
+                </div>
+
         </div>
 
         </div>
