--- a/totalhr.web/Views/Shared/_Layout.cshtml
+++ b/totalhr.web/Views/Shared/_Layout.cshtml
@@ -4,18 +4,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @*@Scripts.Render("~/bundles/modernizr")*@
-    @Scripts.Render("~/Scripts/jquery-1.11.0.min.js")
+    @Styles.Render("~/Content/css")    
+    @RenderSection("extrastyles", required: false)
+    
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     @Scripts.Render("~/Scripts/Site/common.js")
+    @*Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")*@
+
+    @RenderSection("scripts", required: false)
 </head>
 <body>
     @RenderBody()
-        
-    @RenderSection("scripts", required: false)
 
     <div id="dvPopup" style="display: none;"> 
         <iframe id="ipopup"></iframe>       
     </div>
+
+    <script>
+       @Html.Raw(string.Format(@" window.jQuery || document.write('<script src=""{0}Scripts/jquery-1.11.0.min.js""><\/script>');", 
+        totalhr.web.Helpers.GenericHelper.WebsiteRoot))
+    </script>
+
 </body>
 </html>
