--- a/totalhr.web/Views/Document/Create.cshtml
+++ b/totalhr.web/Views/Document/Create.cshtml
@@ -7,12 +7,18 @@
 
 @{
     ViewBag.Title = GenericHelper.WebsiteName + " | " + Document.V_Document_title;
-    List<CompanyFolder> folders = new List<CompanyFolder>
-    {
-        new CompanyFolder{DisplayName= "Test Folder", Id = 1}
-    };
+    var folders = ViewBag.Folders as List<CompanyFolder>;
+       
+    if(folders == null){
+        folders = new List<CompanyFolder> { new CompanyFolder { Id = -1, DisplayName = Document.v_Select } };     
+    }else{
+        folders.Insert(0, new CompanyFolder { Id = -1, DisplayName = Document.v_Select });
+    }
+    
     int CompanyId = Convert.ToInt32(ViewBag.CompanyId);
 }
+
+
 
 @section scripts{
     <script type="text/javascript" src="/Scripts/Site/CompanyDocument.js"></script>
@@ -30,6 +36,7 @@
          
             <div class="formdiv midform">
                 <div class="wrapper">
+                    @Html.HiddenFor(x => x.DocId)
 
                      <div class="line">
                         <label>@Document.V_DisplayName <b class="req">*</b></label>
@@ -37,8 +44,8 @@
                     </div>
                     <div class="line">
                         <label>@Document.V_Folder</label>
-                         <span>@Html.DropDownListFor(x => x.FolderId,  new SelectList(folders, "Id", "DisplayName"))
-                            <input type="button" value="Add New" onclick="OpenSelectorForFolder();" />
+                         <span>@Html.DropDownListFor(x => x.FolderId, new SelectList(folders, "Id", "DisplayName"))
+                            <input type="button" value="@Document.V_Add_Folder" onclick="OpenSelectorForFolder('frmCreateFolder');" />
                          </span> 
                                            
                     </div>
@@ -57,6 +64,8 @@
                     <div class="line">
                         <label>&nbsp;</label>
                          <span>
+                             <input type="button" value="@Document.V_Back_To_List" onclick="document.location.href = '/Document'" />
+                                 &nbsp;
                              <input type="submit" id="btnSubmit" value="@Document.V_Upload" />
                          </span>                    
                     </div>
@@ -72,8 +81,13 @@
     var WHOLE_COMPANY = @((int)Variables.DocumentPermissionType.WholeCompany);
     var SELECTED_USERS = @((int)Variables.DocumentPermissionType.SelectedUsers);
     var DEPARTMENT = @((int)Variables.DocumentPermissionType.Department);
+    var MSG_SELECT_USER = '@Html.Raw(HttpUtility.JavaScriptStringEncode(Document.V_Select_User))';
+    var MSG_SELECT_DEPARTMENT = '@Html.Raw(HttpUtility.JavaScriptStringEncode(Document.V_Select_Department))';
+    var MSG_Error_NoUser_ForPermission = '@Html.Raw(HttpUtility.JavaScriptStringEncode(Document.Error_NoUser_ForPermission))';
+    var MSG_Error_NoDept_ForPermission ='@Html.Raw(HttpUtility.JavaScriptStringEncode(Document.Error_NoDept_ForPermission))';
 </script>
 
-<div id="frmCreateFolder">
-    @Html.Partial("_FolderCreate")
-</div>
+ @Html.Partial("_CompanyDocItemSelector")
+  
+ @Html.Partial("_FolderCreate")
+        
